--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Associate Project Co-ordinator - Cloud Vision Labs</h4>
+              <h4 class="h4 timeline-item-title">Associate Software Engineer - Cloud Vision Labs</h4>
 
               <span>Jun 2023 — Dec 2023</span>
 
@@ -1066,7 +1066,7 @@
           </figure>
         </section>
 
-        <section class="contact-form">
+        <!-- <section class="contact-form">|
 
           <h3 class="h3 form-title">Contact Form</h3>
 
@@ -1087,7 +1087,79 @@
 
           </form>
 
-        </section>
+        </section> -->
+<!-- <section class="contact-form">
+
+  <h3 class="h3 form-title">Contact Form</h3>
+
+
+  <form  id="gform" 
+  action="https://docs.google.com/forms/d/e/1FAIpQLSeJSEvv8-DPY4BK47YBqH8dnOeIBstp5A7TpC316P6gmkwI5g/formResponse" method="POST">
+
+    <div class="input-wrapper">
+
+      <input type="text" name="entry.865946710" class="form-input" placeholder="Full name" required>
+
+ 
+      <input type="email" name="entry.1702274434" class="form-input" placeholder="Email address" required>
+    </div>
+
+   
+    <textarea name="entry.1316849788" class="form-input" placeholder="Your Message" required></textarea>
+
+    <button class="form-btn" type="submit">
+      <ion-icon name="paper-plane"></ion-icon>
+      <span>Send Message</span>
+    </button>
+
+  </form>
+
+</section> -->
+
+<section class="contact-form">
+
+  <h3 class="h3 form-title">Contact Form</h3>
+
+  <!-- Hidden iframe to capture Google Forms response -->
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
+  <form id="gform"
+    action="https://docs.google.com/forms/d/e/1FAIpQLSeJSEvv8-DPY4BK47YBqH8dnOeIBstp5A7TpC316P6gmkwI5g/formResponse"
+    method="POST"
+    target="hidden_iframe"
+    onsubmit="submitted=true;">
+
+    <div class="input-wrapper">
+      <input type="text" name="entry.865946710" class="form-input" placeholder="Full name" required>
+      <input type="email" name="entry.1702274434" class="form-input" placeholder="Email address" required>
+    </div>
+
+    <textarea name="entry.1316849788" class="form-input" placeholder="Your Message" required></textarea>
+
+    <button class="form-btn" type="submit">
+      <ion-icon name="paper-plane"></ion-icon>
+      <span>Send Message</span>
+    </button>
+  </form>
+
+  <!-- Success message -->
+  <p id="successMessage" style="display:none; color:green; margin-top:10px;">
+    ✅ Your message has been submitted successfully!
+  </p>
+
+</section>
+
+<script>
+  let submitted = false;
+
+  document.getElementById('hidden_iframe').onload = function () {
+    if (submitted) {
+      document.getElementById('successMessage').style.display = 'block';
+      document.getElementById('gform').reset();
+      submitted = false;
+    }
+  };
+</script>
 
       </article>
 
